--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
  - pip3 install lxml
  - pip3 install numpy
  - pip3 install wheel
- - pip3 install scons3
+ - pip3 install scons
  - pip3 install  pyx
 
 cache:
